namespaces/live-1.cloud-platform.service.justice.gov.uk/offender-case-notes-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: offender-case-notes-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "prod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "offender-case-notes"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/offender-case-notes.git"
